--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
 body {
-  background-color: rgb(176, 37, 37);
-  color: black;
+  background-color: rgb(55, 37, 176);
+  color: rgb(252, 252, 252);
 }
