Upravene farby pozadia a pisma

--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
 body {
-  background-color: rgb(55, 37, 176);
-  color: rgb(252, 252, 252);
+  background-color: rgb(8, 132, 31);
+  color: rgba(252, 252, 252, 0.785);
 }
